assets/css/style.css
/* ... */
.justify-content-start {
    -ms-flex-pack: start !important;
    justify-content: flex-start !important;
}

.justify-content-end {
    -ms-flex-pack: end !important;
    justify-content: flex-end !important;
}

.justify-content-center {
    -ms-flex-pack: center !important;
    justify-content: center !important;
}

.justify-content-between {
    -ms-flex-pack: justify !important;
    justify-content: space-between !important;
}

.justify-content-around {
    -ms-flex-pack: distribute !important;
    justify-content: space-around !important;
}

.align-items-start {
    -ms-flex-align: start !important;
    align-items: flex-start !important;
}

.align-items-end {
    -ms-flex-align: end !important;
    align-items: flex-end !important;
}

.align-items-center {
    -ms-flex-align: center !important;
    align-items: center !important;
}

.align-items-baseline {
    -ms-flex-align: baseline !important;
    align-items: baseline !important;
}

.align-items-stretch {
    -ms-flex-align: stretch !important;
    align-items: stretch !important;
}

.align-content-start {
    -ms-flex-line-pack: start !important;
    align-content: flex-start !important;
}

.align-content-end {
    -ms-flex-line-pack: end !important;
    align-content: flex-end !important;
}

.align-content-center {
    -ms-flex-line-pack: center !important;
    align-content: center !important;
}

.align-content-between {
    -ms-flex-line-pack: justify !important;
    align-content: space-between !important;
}

.align-content-around {
    -ms-flex-line-pack: distribute !important;
    align-content: space-around !important;
}

.align-content-stretch {
    -ms-flex-line-pack: stretch !important;
    align-content: stretch !important;
}

.schema-faq-question {
    font-size: 22px;
}

/* CSS Specific pentru templata pricing-page-3 */
.page-template-pricing-section-3 header {
    border-bottom: 1px solid #DDD;
}

.page-template-pricing-section-3 .title-section {
    padding: 3.125rem 0 0 0;
    background: #FFF;
    color: #000;
}

.page-template-pricing-section-3 .title-section h1 {
    font-size: 2rem;
    font-weight: 400;
    color: #41495b;
}

.pt-0 {padding-top: 0;}
.testimonials-section-3 .testimonial__stars {
    display: block;
    margin: 0 auto 20px auto;
}
.pricing-note { color: #999999;}
.cta_money_back_guarantee {
    font-size: 13px;
    position: relative;
    top: -15px;
}
.pricing-table--last > .col-xs-3:nth-of-type(2),
.pricing-table--last > .col-xs-3:nth-of-type(3),
.pricing-table--last > .col-xs-3:nth-of-type(4) {
    border-bottom: 1px solid #ebebeb;
}
.pricing-table--comparison {
    display: none;
}

